--- a/curso-html5-pacote01/projeto-glass-html5/_css/estilo.css
+++ b/curso-html5-pacote01/projeto-glass-html5/_css/estilo.css
@@ -15,7 +15,7 @@ p{
 /*Borda na imagem - Classe Pai*/
 figure.foto-legenda{
 
-	position: relative; /*Auxiliar o figcaption*/
+	position: relative; /*Auxiliar o figcaption - fica disponível para trabalhar em toda a página*/
 	border: 8px solid white;
 	box-shadow: 1px 1px 4px black;
 }
@@ -31,7 +31,7 @@ figure.foto-legenda img{
 figure.foto-legenda figcaption{
 
 	opacity: 0;
-	position: absolute;
+	position: absolute; /*preso dentro do container*/
 	top: 0px;
 	background-color: rgba(0,0,0, 0.4);
 	color: white;
@@ -46,4 +46,32 @@ figure.foto-legenda figcaption{
 figure.foto-legenda:hover figcaption{
 
 	opacity: 1;
+}
+
+/*Formatação do menu*/
+
+nav#menu{
+
+	display: block;
+}
+nav#menu ul{
+
+	list-style: none; /*Retira marcadores*/
+	text-transform: uppercase; /*Todas letras em maiusculas*/
+	position: absolute; /*Possa passar por cima dos documentos*/
+	top: -20px;
+	left: 600px;
+}
+
+nav#menu li{
+
+	display: inline-block;/*Exibir blocos na mesma linha*/
+	background-color: #dddddd;
+	padding: 10px;/*Cria um espaço dentro dele*/
+	margin: 2px; /*Espaço entre os botões (fora)*/
+}
+
+nav#menu h1{
+
+	display: none;/*None esconde o texto marcado*/
 }
