--- a/curso-html5-pacote01/projeto-glass-html5/_css/estilo.css
+++ b/curso-html5-pacote01/projeto-glass-html5/_css/estilo.css
@@ -60,7 +60,7 @@ nav#menu ul{
 	text-transform: uppercase; /*Todas letras em maiusculas*/
 	position: absolute; /*Possa passar por cima dos documentos*/
 	top: -20px;
-	left: 600px;
+	left: 300px;
 }
 
 nav#menu li{
@@ -69,9 +69,28 @@ nav#menu li{
 	background-color: #dddddd;
 	padding: 10px;/*Cria um espaço dentro dele*/
 	margin: 2px; /*Espaço entre os botões (fora)*/
+	transition: background-color 1s; /*leva um segundo para mudar de uma cor para outra*/
+}
+
+/*Hover é sempre que o mouse estiver sobre*/
+nav#menu li:hover {
+
+	background-color: #606060;
 }
 
 nav#menu h1{
 
 	display: none;/*None esconde o texto marcado*/
+}
+
+nav#menu a{
+
+	color: black;
+	text-decoration: none; /*Tirou as listras do menu*/
+}
+
+nav#menu a:hover{
+
+	color: white;
+	text-decoration: underline;
 }
